--- a/config/database.yml
+++ b/config/database.yml
@@ -1,16 +1,36 @@
+# development:
+#   adapter: mysql2
+#   encoding: utf8
+#   database: tinker_development
+#   host: localhost
+#   pool: 10
+#   username: dlabs
+#   password: dlabs
+
+# production:
+#   adapter: mysql2
+#   encoding: utf8
+#   database: tinker_production
+#   pool: 10
+#   username: dlabs
+#   password: dlabs
+
 development:
-  adapter: mysql2
-  encoding: utf8
+  adapter: postgresql
+  encoding: unicode
   database: tinker_development
   host: localhost
   pool: 10
-  username: dlabs
-  password: dlabs
+
+test:
+  adapter: postgresql
+  encoding: unicode
+  database: tinker_test
+  host: localhost
+  pool: 10
 
 production:
-  adapter: mysql2
-  encoding: utf8
+  adapter: postgresql
+  encoding: unicode
   database: tinker_production
   pool: 10
-  username: dlabs
-  password: dlabs
