database for production setup

--- a/config/database.yml
+++ b/config/database.yml
@@ -32,5 +32,7 @@ test:
 production:
   adapter: postgresql
   encoding: unicode
-  database: tinker_production
+  database: d3c24jg5vg9ceg
   pool: 10
+  username: uscwbglajgeoww
+  password: ZqJtWJAnTEIW_0M1WitT-K0wDh
