--- a/config/database.yml
+++ b/config/database.yml
@@ -7,13 +7,12 @@
 #   username: dlabs
 #   password: dlabs
 
-# production:
-#   adapter: mysql2
-#   encoding: utf8
-#   database: tinker_production
-#   pool: 10
-#   username: dlabs
-#   password: dlabs
+production:
+  adapter: postgresql
+  encoding: utf8
+  database: tinker_production
+  host: localhost
+  pool: 10
 
 development:
   adapter: postgresql
