--- a/config/database.yml
+++ b/config/database.yml
@@ -7,12 +7,13 @@
 #   username: dlabs
 #   password: dlabs
 
-production:
-  adapter: postgresql
-  encoding: utf8
-  database: tinker_production
-  host: localhost
-  pool: 10
+# production:
+#   adapter: mysql2
+#   encoding: utf8
+#   database: tinker_production
+#   pool: 10
+#   username: dlabs
+#   password: dlabs
 
 development:
   adapter: postgresql
